--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ratatui = "0.28.1"
+eframe = "0.29.1"
 serde = { version = "1.0.210", features = ["derive"] }
 toml = "0.8.19"
 log = "0.4"
