--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
 eframe = "0.29.1"
 serde = { version = "1.0.210", features = ["derive"] }
 toml = "0.8.19"
