--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ pretty_env_logger = "0.5"
 dotenv = "0.15.0"
 egui_extras = { version = "0.29.1", features = ["all_loaders"] }
 image = { version = "0.25", features = ["png"] } 
+egui_file  = "0.19"
